--- a/Antitrojan.vcxproj
+++ b/Antitrojan.vcxproj
@@ -82,6 +82,7 @@
       <ProgramDatabaseFile>.\Debug/Antitrojan.pdb</ProgramDatabaseFile>
       <SubSystem>Console</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
